problemas con css

--- a/viewsEJS/addTask.ejs
+++ b/viewsEJS/addTask.ejs
@@ -1,5 +1,5 @@
 <%- include('template/header'); %>
 <div class= 'flex-container'>
-<div class = 'text-container'> <h1><%= title404 %></h1> </div>
-</div>
+    <div class = 'text-container'> <h1>Add your task</h1> </div>
+    </div>
 <%- include('template/footer'); %>
