--- a/viewsEJS/services.ejs
+++ b/viewsEJS/services.ejs
@@ -1,5 +1,5 @@
-<%- include('../template/header'); %>
+<%- include('template/header'); %>
 <div class= 'flex-container'>
 <div class = 'text-container'> <h1><%= serviceTitle %></h1> </div>
 </div>
-<%- include('../template/footer'); %>
+<%- include('template/footer'); %>
