--- a/viewsEJS/listtodo.ejs
+++ b/viewsEJS/listtodo.ejs
@@ -1,4 +1,4 @@
-<%- include('../template/header'); %>
+<%- include('template/header'); %>
 <div class= 'flex-container'>
 <div class = 'text-container'> <h1><%= listtodoTitle %></h1> </div>
 </div>
@@ -22,5 +22,5 @@
 <div class= 'add-bottom'> <button class = 'button-add' type="button"> Add Task </button></div>
 <div class="blank-grid"></div>
 </div>
-<%- include('../template/footer'); %>
+<%- include('template/footer'); %>
 
