--- a/viewsEJS/listtodo.ejs
+++ b/viewsEJS/listtodo.ejs
@@ -19,7 +19,7 @@
 
 <% } %> 
 <div class= 'blank-grid'></div>
-<div class= 'add-bottom'> <button class = 'button-add' type="button"> Add Task </button></div>
+<div class= 'add-bottom'> <button class = 'button-add' href= '/addTask' type="button"> Add Task </button></div>
 <div class="blank-grid"></div>
 </div>
 <%- include('template/footer'); %>
