--- a/public/styles.css
+++ b/public/styles.css
@@ -166,7 +166,29 @@ nav a:hover{
     color:royalblue
 }
 
+.add-input { 
+    background: url(scroll.png);
+    background-size: 100% 100%;
+    width: 381px;
+    margin: auto;
+    padding-top: 12px;
+    padding-bottom: 12px;
+}
 
+.add-input  form {
+    width:50%; 
+    margin:0 auto;
+    font-size: large;
+    
+ }
+
+ .errorinput form{
+    width:50%; 
+    margin:0 auto;
+    font-size: large;
+    border-color: red;
+ }
+  
 
 @media only screen and (min-width:400px) and (max-width:767px) {
     .header{ 
@@ -186,6 +208,7 @@ nav a:hover{
 
 
 }
+
 
 @media screen and (max-width:394px ) {
     .flex-container {
