--- a/viewsEJS/listtodo.ejs
+++ b/viewsEJS/listtodo.ejs
@@ -12,8 +12,8 @@
     <div class= 'elements'><%= task.date %></div>  
     <div class= 'elements'><%= task.task %> </div>  
     <div class= 'elements-bottom'>
-      <button class= "button-delete" type="button">Delete</button><br>
-      <a class='button-edit' href= '/listtodo/<%= task.id %> '>Edit</a>
+      <button class= "button-delete" type="button" data-id="<%= task.id %>" >Delete</button><br>
+      <a class='button-edit' href= "/listtodo/<%= task.id %>">Edit</a>
     </div>   
 <% }) %>
 
@@ -24,3 +24,24 @@
 </div>
 <%- include('template/footer'); %>
 
+<script>
+const btnDelete= document.getElementsByClassName("button-delete")
+ console.log (btnDelete)
+  for (var i = 0 ; i < btnDelete.length; i++) {
+
+ btnDelete[i].addEventListener ( 'click', () => {
+console.log ('you clicked me')
+const id= btnDelete[i].dataset.id
+console.log(btnDelete[i])
+})
+}
+//   try {
+//   const data= await fetch (`/listtodo/${id}`,{method: 'delete'})
+// }catch (e) {
+//   console.log (e)
+//  }
+
+// })
+// }
+
+</script>
