--- a/viewsEJS/addTask.ejs
+++ b/viewsEJS/addTask.ejs
@@ -8,7 +8,7 @@
         <label for="fname">Date:</label>
         <input type="text" id="dateInput" name="date" placeholder="00/00/00" ><br><br>
         <label for="lname">Task:</label>
-        <input type="text" id="taskInput" name="task" placeholder="E.g: attend yoga class"><br><br>
+        <input type="text" id="taskInput" name="task" placeholder="E.g: attend to yoga class"><br><br>
         <div class= 'add-bottom'> <button class = 'button-add' type="submit" onclick=""> Add Task </button></div>
         </form>
     
