--- a/public/styles.css
+++ b/public/styles.css
@@ -189,6 +189,10 @@ nav a:hover{
     border-color: red;
  }
   
+ .table {
+    background: url(scroll.png);
+    background-size: 100% 100%;
+ }
 
 @media only screen and (min-width:400px) and (max-width:767px) {
     .header{ 
