--- a/viewsEJS/template/header.ejs
+++ b/viewsEJS/template/header.ejs
@@ -15,7 +15,7 @@
     <header class= 'header'>
         <div class= 'wrapper'>
             <div class= 'logo'>
-                Crud con mongo y express
+                list mongoDB & express
             </div>
             <nav>
                 <a href="/">Index</a>
