--- a/viewsEJS/template/header.ejs
+++ b/viewsEJS/template/header.ejs
@@ -15,7 +15,7 @@
     <header class= 'header'>
         <div class= 'wrapper'>
             <div class= 'logo'>
-                List mongoDB & express
+                List mongoDB <br> &  express
             </div>
             <nav>
                 <a href="/">Index</a>
