--- a/viewsEJS/template/header.ejs
+++ b/viewsEJS/template/header.ejs
@@ -15,11 +15,11 @@
     <header class= 'header'>
         <div class= 'wrapper'>
             <div class= 'logo'>
-                List to do
+                to do list
             </div>
             <nav>
                 <a href="/">Index</a>
-                <a href="/listtodo">list to do</a>
+                <a href="/listtodo">to do list</a>
                 <a href="/services">Services</a>
                 <a href="/404">404</a>
             </nav>
